<resources>
    <string name="app_name">Roomie</string>
    <string name="request_permission_title">Permission Request</string>
    <string name="request_permission_approve">OK</string>
    <string name="request_read_external_storage_msg">
        In order to set your profile picture we need your permission to access your photos.
    </string>
    <string name="facebook_application_id" translatable="false">2764482827173556</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2764482827173556</string>
    <string name="sign_in_welcome_msg">Hey, roomie!</string>
    <string name="sign_in_sign_in">Sign In</string>
    <string name="firebase_auth_sign_in_title">SIGN IN</string>
    <string name="firebase_auth_sign_in_create_new_account">Create New Account</string>
    <string name="firebase_auth_sign_in_or">or</string>
    <string name="firebase_auth_sign_in_google">Sign in with Google</string>
    <string name="firebase_auth_sign_in_facebook">Sign in with Facebook</string>
    <string name="choose_house_toolbar_title">Choose House</string>
    <string name="choose_house_welcome_msg">Hey, %s!</string>
    <string name="choose_house_no_houses_msg">You currently don\'t have a house, which means you are homeless... Let\'s fix it!</string>
    <string name="choose_house_create_new_house">Create new house</string>
    <string name="choose_house_join_existing_house">Join existing house</string>
    <string name="choose_house_sign_out">Sign Out</string>
    <string name="create_new_house_toolbar_title">Create New House</string>
    <string name="create_new_house_house_name">House name</string>
    <string name="create_new_house_house_address">House address</string>
    <string name="create_new_house_house_desc">House description</string>
    <string name="create_new_house_create_new_house">Create new house</string>
    <string name="create_new_house_err_invalid_house_name">Invalid house name</string>
    <string name="create_new_house_err_invalid_house_address">Invalid house address</string>
    <string name="create_new_house_err_invalid_house_desc">Invalid house description</string>
    <string name="create_new_house_success">The house %s was created!</string>
    <string name="create_new_house_err_create_house">There was an error during house creation, please try again.</string>
    <string name="house_drawer_menu_house">House</string>
    <string name="house_drawer_menu_invite_roomie">Invite Roomie</string>
    <string name="house_drawer_menu_house_settings">House Settings</string>
    <string name="house_drawer_menu_user_profile">User Profile</string>
    <string name="house_drawer_menu_sign_out">Sign Out</string>
    <string name="house_bottom_menu_feed">Feed</string>
    <string name="house_bottom_menu_chores">Chores</string>
    <string name="house_bottom_menu_groceries">Groceries</string>
    <string name="house_bottom_menu_expenses">Expenses</string>
    <string name="house_bottom_menu_chat">Chat</string>
    <string name="house_feed_fragment_title">House Feed</string>
    <string name="house_feed_fragment_house_details_title">House Details</string>
    <string name="house_chores_fragment_title">Chores</string>
    <string name="house_groceries_fragment_title">Groceries</string>
    <string name="house_expenses_fragment_title">Expenses</string>
    <string name="house_chat_fragment_title">House Chat</string>
    <string name="house_chat_header_today">Today</string>
    <string name="house_chat_header_yesterday">Yesterday</string>
    <string name="house_invite_roomie_fragment_title">Invite Roomie</string>
    <string name="house_invite_roomie_fragment_step_num_1">1.</string>
    <string name="house_invite_roomie_fragment_step_num_1_content">Click the button below</string>
    <string name="house_invite_roomie_fragment_step_num_2">2.</string>
    <string name="house_invite_roomie_fragment_step_num_2_content">Choose your preferred method to send the invitation</string>
    <string name="house_invite_roomie_fragment_step_num_3">3.</string>
    <string name="house_invite_roomie_fragment_step_num_3_content">Select the recipient</string>
    <string name="house_invite_roomie_fragment_invite_roomie_button">Invite Roomie</string>
    <string name="house_invite_roomie_fragment_note">(the invitation link is valid for the next 24 hours)</string>
    <string name="house_invite_roomie_invite_message" translatable="false">
        Hey, wanna be my roomie?
        \n
        Click the following link to join my house in Roomie App:
        \n
        %s
    </string>
    <string name="house_invite_roomie_chooser_title">Invite Roomie</string>
    <string name="house_invite_roomie_error">Error during invite creation, please try again.</string>
    <string name="house_settings_fragment_title">House Settings</string>
    <string name="house_settings_fragment_house_info_title">House Info</string>
    <string name="house_settings_fragment_house_info_name">Name</string>
    <string name="house_settings_fragment_house_info_desc">Description</string>
    <string name="house_settings_fragment_house_info_address">Address</string>
    <string name="house_settings_fragment_edit_house_info_button">Edit House Info</string>
    <string name="house_settings_fragment_roomies_title">Roomies</string>
    <string name="house_settings_fragment_roomies_profile_picture_desc">Profile Picture</string>
    <string name="edit_house_settings_fragment_title">Edit House Settings</string>
    <string name="edit_house_settings_fragment_house_name">House Name</string>
    <string name="edit_house_settings_fragment_house_address">House Address</string>
    <string name="edit_house_settings_fragment_house_desc">House Description</string>
    <string name="edit_house_settings_fragment_save_changes">Save Changes</string>
    <string name="edit_house_settings_fragment_invalid_house_name">Invalid house name</string>
    <string name="edit_house_settings_fragment_invalid_house_address">Invalid house address</string>
    <string name="edit_house_settings_fragment_invalid_house_desc">Invalid house description</string>
    <string name="edit_house_settings_fragment_saved_successfully">Changes saved successfully!</string>
    <string name="house_user_profile_fragment_title">User Profile</string>
    <string name="house_user_profile_fragment_profile_pic_desc">Profile Picture</string>
    <string name="house_user_profile_fragment_roomie_in">Roomie in %s</string>
    <string name="house_user_profile_fragmnet_brooms">Brooms</string>
    <string name="house_user_profile_fragmnet_chores">Chores</string>
    <string name="house_user_profile_fragmnet_expenses">Expenses</string>
    <string name="house_user_profile_fragment_edit_profile_button">Edit Profile</string>
    <string name="house_user_profile_fragment_done_chores_dialog_title">Chores done this month</string>
    <string name="house_user_profile_fragment_chores_dialog_title">Chores to do this month</string>
    <string name="house_user_profile_fragment_expenses_dialog_title">Unsettled expenses</string>
    <string name="house_edit_user_profile_fragment_title">Edit Profile</string>
    <string name="house_edit_user_profile_fragment_change_picture_desc">Change Profile Picture</string>
    <string name="house_edit_user_profile_fragment_username_text">Username</string>
    <string name="house_edit_user_profile_fragment_save_changes">Save Changes</string>
    <string name="house_edit_user_profie_fragment_invalid_username">Invalid username.</string>
    <string name="house_edit_user_profile_fragment_success">Profile updated successfully.</string>
    <string name="join_house_activity_title">Join House</string>
    <string name="join_house_activity_already_user_has_house">You already have a house!</string>
    <string name="join_house_activity_explanation">You are about to join the house</string>
    <string name="join_house_activity_confirm">Click join to confirm</string>
    <string name="join_house_activity_join_button">Join</string>
    <string name="join_house_activity_invitation_or_house_dont_exist">The invitation or house doesn\'t exist.</string>
    <string name="join_house_activity_invitation_expired">The invitation has been expired.</string>
    <string name="join_house_activity_welcome_msg">Welcome, you have joined to your new house!</string>
    <string name="join_house_activity_join_error">Error while joining the house, Please try again.</string>
    <string name="roomie_profile_fragment_title">Roomie Profile</string>
    <string name="roomie_profile_fragment_profile_pic_desc">Profile Picture</string>
    <string name="roomie_profile_fragment_roomie_in">Roomie in %s</string>
    <string name="roomie_profile_fragmnet_brooms">Brooms</string>
    <string name="roomie_profile_fragmnet_chores">Chores</string>
    <string name="roomie_profile_fragmnet_expenses">Expenses</string>
    <string name="enter_your_title_here">enter your title here</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="assignee">Assignee</string>
    <string name="create">create</string>
    <string name="create_new_item_err_msg"> there was an error creating the item, please try again</string>
    <string name="expenseType">Expense Type</string>
    <string name="enter_custom_expense">Enter the title of your expense here</string>
    <string name="cost">Cost</string>
    <string name="enter_expense_price">Enter Expense Price</string>
    <string name="currently_no_assignee">currently no assignee</string>
    <string name="due_date">Due date</string>
    <string name="chore_title">Chore Title</string>
    <string name="other">other</string>
    <string name="enter_title">please enter title</string>
    <string name="no_title_error_msg">please choose a title or choose \'other\' and enter your own</string>
    <string name="change_due_date">change date</string>
    <string name="edit">edit</string>
    <string name="changeTitle">CHANGE TITLE</string>
    <string name="enterNewTitle">Enter new title</string>
    <string name="changeAssignee">CHANGE ASSIGNEE</string>
    <string name="pickNewAssignee">pick new assignee</string>
    <string name="delete">delete</string>
    <string name="remindMe">Remind me</string>
    <string name="grocerySize">grocery size</string>
    <string name="big">big</string>
    <string name="medium">medium</string>
    <string name="small">small</string>
    <string name="markAsDone">mark as done</string>
    <string name="markAsUnDone">mark as undone</string>
    <string name="choreSize">Chore Size</string>
    <string name="general">General</string>
    <string name="create_expense_error_msg">There was an error creating the expense. Try again
        later</string>
    <string name="paid_for_by">Paid For By</string>
    <string name="currency_sign">₪</string>
    <string name="expense_title">Expense Title</string>
    <string name="no_payer_set">No Payer Set</string>
    <string name="house_spending">House Spending:</string>
    <string name="filter">filter by</string>
    <string name="sortBy">sort by</string>
    <string name="doFilter">filter</string>
    <string name="filterByDoneString">Done</string>
    <string name="filterByUndoneString">Undone</string>
    <string name="filterByLastWeekString">from last week</string>
    <string name="filterByLastMonthString">from last month</string>
    <string name="filterBySizeString">size</string>
    <string name="you_are_owed">You are owed</string>
    <string name="you_owe">You owe</string>
    <string name="no_expenses_made_yet">No expenses made yet</string>
    <string name="youCanAddDescription">short description,\nup to 100 letters (optional)</string>
    <string name="description">Description (optional)</string>
    <string name="editChoreContent">edit description</string>
    <string name="time_left">"time left"</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
</resources>