<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/house_feed_fragment_dest"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/house_drawer_menu_house" />
        <item
            android:id="@+id/house_invite_roomie_fragment_dest"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/house_drawer_menu_invite_roomie" />
        <item
            android:id="@+id/house_settings_fragment_dest"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/house_drawer_menu_house_settings" />
        <item
            android:id="@+id/house_user_profile_fragment_dest"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/house_drawer_menu_user_profile" />
        <item
            android:id="@+id/houseMenuSignOut"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/house_drawer_menu_sign_out"
            android:onClick="signOut"/>
    </group>
</menu>