<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".house.chores.chore.newChoreFragment">

    <FrameLayout
        android:id="@+id/expense_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/costTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/expenseTypeSpinner"
        app:layout_constraintStart_toStartOf="@+id/expenseTypeSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <me.abhinay.input.CurrencyEditText
        android:id="@+id/expenseCostEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_expense_price"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/costTextView" />


    <TextView
        android:id="@+id/expenseTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/expenseType"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/expenseTypeSpinner"
        app:layout_constraintStart_toStartOf="@+id/expenseTypeSpinner"
        app:layout_constraintTop_toBottomOf="@id/expenseCostEditText" />


    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/expenseTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseTypeTextView" />


    <EditText
        android:id="@+id/customExpenseTypeEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_custom_expense"
        android:visibility="invisible"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseTypeSpinner" />

    <TextView
        android:id="@+id/expenseContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customExpenseTypeEditText" />

    <EditText
        android:id="@+id/expenseContentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/expensePayerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseContentTextView" />

    <TextView
        android:id="@+id/expensePayerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignee"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/expensePayerSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/expensePayerSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/createExpenseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_bg"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>