<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/firebase_auth_sign_in_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/firebase_auth_sign_in_title"
        style="@style/MainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/firebase_auth_sign_in_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_auth_sign_in_logo" />

    <Button
        android:id="@+id/firebase_auth_sign_in_create_account_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/fui_bgEmail"
        android:drawableStart="@drawable/ic_baseline_create_new_account_24"
        android:drawablePadding="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/firebase_auth_sign_in_create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_auth_sign_in_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firebase_auth_sign_in_or_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/sign_in_or_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_auth_sign_in_create_account_button">

        <TextView
            android:id="@+id/firebase_auth_sign_in_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:paddingHorizontal="8dp"
            android:text="@string/firebase_auth_sign_in_or"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/firebase_auth_sign_in_google_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/fui_bgGoogle"
        android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
        android:drawablePadding="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/firebase_auth_sign_in_google"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_auth_sign_in_or_wrapper" />

    <Button
        android:id="@+id/firebase_auth_sign_in_facebook_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/fui_bgFacebook"
        android:drawableStart="@drawable/fui_ic_facebook_white_22dp"
        android:drawablePadding="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/firebase_auth_sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_auth_sign_in_google_button" />

</androidx.constraintlayout.widget.ConstraintLayout>